fixed navbar-content overlap

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-top: 40px;
 }
 
 code {
@@ -38,8 +39,4 @@ code {
   text-align: center;
   margin-top: 20px;
   font-weight: 400;
-}
-
-.display-4 {
-  margin-top: 10%;
 }
